<resources>
    <string name="app_name">CConverter</string>
    <string name="settings_title">Settings</string>
    <string name="no_internet">There is no Internet</string>
    <string name="nav_title_home">Home</string>
    <string name="nav_title_settings">Settings</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="add_selection">Add</string>
    <string name="home_title">Currency Converter</string>
    <string name="home_selection_label">Select Default Currency:</string>
    <string name="currency_label">Currency</string>
    <string name="textfield_hint">0.0</string>
    <string name="done_action">Done</string>
    <string name="selected">selected</string>
    <string name="search_currency">Search Currency</string>
    <string name="test_result">result</string>
    <string name="test_selection_tag">Selection</string>
</resources>